--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,8 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
+    //Mockito
+    testImplementation 'org.mockito:mockito-core:2.23.4'
+    testImplementation 'android.arch.core:core-testing:1.1.1'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7'
 }
